--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="ajedile_knights">A(jed)ile Knights</string>
+    <string name="nombre_aplicacion">NOMBREAPP</string>
 </resources>
