--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="ajedile_knights">A(jed)ile Knights</string>
-    <string name="nombre_aplicacion">NOMBREAPP</string>
+    <string name="nombre_aplicacion">MAKE.YOUR.COVID</string>
     <string name="fondo_men">Fondo menú</string>
     <string name="mapa">Mapa</string>
     <string name="acciones">Acciones</string>
