--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">PracProcesos</string>
-    <string name="title_activity_splash">FullscreenActivity</string>
+    <string name="app_name">Make Your Covid</string>
+    <string name="title_activity_splash">Make Your Covid</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="ajedile_knights">A(jed)ile Knights</string>
